Implement "messages" to objects. Needed for NPCs to take damage.